@@ -14,7 +14,7 @@
 # DRLM automatically generates a ReaR configuration file in function of three
 # variable values, DRLM_BKP_TYPE,  DRLM_BKP_PROT and DRLM_BKP_PROG.
 #
-# DRLM_BKP_TYPE --> backup type (ISO, ISO_FULL, ISO_FULL_TMP, PXE or DATA)
+# DRLM_BKP_TYPE --> backup type (ISO, ISO_FULL, ISO_FULL_TMP, PXE, RAWDISK or DATA)
 # DRLM_BKP_PROT --> transport protocol (RSYNC or NETFS)
 # DRLM_BKP_PROG --> backup program (RSYNC or TAR)
 #
@@ -45,6 +45,16 @@
 #  |-- DRLM_BKP_PROT=NETFS
 #       |-- DRLM_BKP_PROG=TAR
 #       |-- DRLM_BKP_PROG=RSYNC
+#
+# Backup type RAWDISK generates a rescue image in RAWDISK format and backup data is stored
+# in a DRLM server directory.
+#
+# DRLM_BKP_TYPE=RAWDISK
+#  |-- DRLM_BKP_PROT=RSYNC
+#  |-- DRLM_BKP_PROT=NETFS
+#       |-- DRLM_BKP_PROG=TAR
+#       |-- DRLM_BKP_PROG=RSYNC
+#
 #
 # Backup type DATA only does data bakup, it does not generate a rescue image. Backup type DATA
 # must be used in conjunction with the parameter BACKUP_PROG_INCLUDE described below and it
