@@ -5,9 +5,12 @@ drlm (2.4.10) stable release; urgency=high
   * NEW! XML/JSON error reporting supported
   * Bugfix in impbackup client configuration
   * Bugfix runbackup umounting previous backups 
-  * Bugfix runbackup rsync hidden warning errors
+  * Bugfix runbackup rsync hidden warning errors  
+  * NEW! RAWDISK output backup type supported
+  * Updated Suse 15 ReaR repositories
+  * Bugfix in web, holded backups are not shown
 
- -- Pau Roura <pau@brainupdaters.net>  Fri, 10 Feb 2023 00:00:00 +0100
+ -- Pau Roura <pau@brainupdaters.net>  Thu, 7 Dec 2023 00:00:00 +0100
 
 drlm (2.4.9) stable release; urgency=high
   * Bugfix in importbackup Debian nbd detach
